--- a/SSMG registered Participants.html
+++ b/SSMG registered Participants.html
@@ -147,7 +147,7 @@ border: 1px solid #FFFFFF;
 </style>
 </head>
 <center>
-<div id="header"><b id="heading">Registered Participants:</b><b id="upd">Last updated: 23/05/2022 @ 02:00 PM</b><button id="filtershowbtn" onclick="filterdata()">Filter</button>
+<div id="header"><b id="heading">Registered Participants:</b><b id="upd">Last updated: 24/05/2022 @ 12:00 PM</b><button id="filtershowbtn" onclick="filterdata()">Filter</button>
 </div>
 
 <div id="filtershow">
@@ -207,6 +207,8 @@ border: 1px solid #FFFFFF;
 <tr><td>47.</td><td>Sahil Khan</td><td>Mohsin Khan</td><td>Male</td><td>09/05/2004</td><td>Senior</td><td>Rajasthan</td><td>7597086722</td><td>Pending</td></tr>
 <tr><td>48.</td><td>Nasrat</td><td>Anbar khan</td><td>Female</td><td>05/10/2004</td><td>Senior</td><td>Rajasthan</td><td>9588898164</td><td>Verified</td></tr>
 <tr><td>49.</td><td>Monika acharya</td><td>Hetram ji</td><td>Female</td><td>17/09/2010</td><td>Junior</td><td>Rajasthan</td><td>6367141425</td><td>Verified</td></tr>
+<tr><td>50.</td><td>Mahipal singh rathore</td><td>balu singh rathore</td><td>Male</td><td>12/10/2000</td><td>Senior</td><td>Rajasthan</td><td>8560933411</td><td>Verified</td></tr>
+<tr><td>51.</td><td>Ruchika rathore</td><td>Jayantilal</td><td>Female</td><td>28/09/2005</td><td>Senior</td><td>Rajasthan</td><td>9950372881</td><td>Verified</td></tr>
 
 </table>
 
